--- a/views/listings/login.ejs
+++ b/views/listings/login.ejs
@@ -3,7 +3,7 @@
       <h3>Hey! Welcome to Login page</h3>
     </div>
 
-    <form novalidate method="post" action="/authenticate/login" class="needs-validation">
+    <form novalidate method="post" action="/login" class="needs-validation">
       <!-- username -->
       <div class="mb-3">
         <label for="inputUsername" class="form-label">Username</label>
