--- a/views/listings/signup.ejs
+++ b/views/listings/signup.ejs
@@ -3,7 +3,7 @@
       <h3>Hey! Welcome to sign up page</h3>
     </div>
 
-    <form novalidate method="post" action="/authenticate/signup" class="needs-validation">
+    <form novalidate method="post" action="/signup" class="needs-validation">
       <!-- email -->
       <div class="mb-3 mt-3">
         <label for="inputEmail" class="form-label">Email</label> <br />
