--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,82 +1,147 @@
-<% layout('layouts/boilerplate.ejs')  %>
-  <body>
-    <h3>listing Details</h3>
-        <div style="width: 50%;" class="">
-        <i><%= owner.username %></i>
-          <h2><%= singleData.title %></h2>
-          <p><%= singleData.description %></p>
-          <img style="width: 30rem; height: 25rem;border-radius: 12px; object-fit: cover;" src="<%= singleData.image.url %>" alt="image" />
-        </div>
-        <div style="width: 50%;" class="mt-3"> 
-          <h4>Price : <%= singleData.price %></h4>
-          <h4> Location : <%= singleData.location %></h4>
-          <h4> Country : <%= singleData.country %></h4>
+<% layout('layouts/boilerplate.ejs') %>
+<script>
+  const map_key = "<%= process.env.MAPTILER_API_KEY %>";
+  const coordinates = <%- JSON.stringify(listing.geometry.coordinates) %>
+</script>
+<div>
+  <h3>listing Details</h3>
+  <div style="width: 50%" class="">
+    <i><%= owner.username %></i>
+    <h2><%= listing.title %></h2>
+    <p><%= listing.description %></p>
+    <img
+      style="
+        width: 30rem;
+        height: 25rem;
+        border-radius: 12px;
+        object-fit: cover;
+      "
+      src="<%= listing.image.url %>"
+      alt="image"
+    />
+  </div>
+  <div style="width: 50%" class="mt-3">
+    <h4>Price : <%= listing.price %></h4>
+    <h4>Location : <%= listing.location %></h4>
+    <h4>Country : <%= listing.country %></h4>
+  </div>
 
-        </div>
-        
-          <% if (currUser && currUser._id.equals(owner._id)) { %>
-            <div style="width: 250px;" class="d-flex mb-3 justify-content-between col-gap-3">
-        
-              <form action="/listings/<%= singleData._id %>">
-                <button class="btn btn-primary" type="submit">Edit Listing</button>      </form>
-              <form
-                action="/listings/<%= singleData._id %>/delete?_method=DELETE"
-                method="post"
-              >
-              <button class="btn btn-primary" type="submit">Delete Listing</button>      </form>
-            </div>
-          <% } %>
+  <% if (currUser && currUser._id.equals(owner._id)) { %>
+  <div
+    style="width: 250px"
+    class="d-flex mb-3 justify-content-between col-gap-3"
+  >
+    <form action="/listings/<%= listing._id %>/edit">
+      <button class="btn btn-primary" type="submit">Edit Listing</button>
+    </form>
+    <form action="/listings/<%= listing._id %>?_method=DELETE" method="post">
+      <button class="btn btn-primary" type="submit">Delete Listing</button>
+    </form>
+  </div>
+  <% } %>
 
-      
-      <div class="mb-3 mt-5 mb-3">
-        <h2>Leave a rating</h2>
-        <form  action="/listings/<%= singleData._id %>/reviews" class="mb-3 needs-validation" novalidate method="post">
-          <div class=" ">
-            <label for="floatingTextarea2" class="mb-3">Comments</label>
-            <textarea name="review[comment]" required class="form-control" placeholder="Leave a comment here"  id="floatingTextarea2" style="height: 100px;font-size: 18px;"></textarea>
-            <div class="valid-feedback">
-              Looks good!
-            </div>
-            <div class="invalid-feedback">
-              Please write something !
-            </div>
-          </div>
-          
-          <fieldset class="starability-slot">
-            <legend>First rating:</legend>
-            <input type="radio" hidden id="no-rate" class="input-no-rate"  name="review[rating]" value="1" checked aria-label="No rating." />
-            <input type="radio" hidden id="first-rate1" name="review[rating]"  value="1" />
-            <label for="first-rate1" title="Terrible">1 star</label>
-            <input type="radio" hidden id="first-rate2" name="review[rating]" value="2" />
-            <label for="first-rate2" title="Not good">2 stars</label>
-            <input type="radio" hidden id="first-rate3" name="review[rating]" value="3" />
-            <label for="first-rate3" title="Average">3 stars</label>
-            <input type="radio" hidden id="first-rate4" name="review[rating]" value="4" />
-            <label for="first-rate4" title="Very good">4 stars</label>
-            <input type="radio" hidden id="first-rate5" name="review[rating]" value="5" />
-            <label for="first-rate5" title="Amazing">5 stars</label>
-          </fieldset>
-          
-          <button type="submit" class="btn mt-3 btn-primary">Submit</button>
+  <div class="mb-3 mt-5 mb-3">
+    <h2>Leave a rating</h2>
+    <form
+      action="/listings/<%= listing._id %>/reviews"
+      class="mb-3 needs-validation"
+      novalidate
+      method="post"
+    >
+      <div class=" ">
+        <label for="floatingTextarea2" class="mb-3">Comments</label>
+        <textarea
+          name="review[comment]"
+          required
+          class="form-control"
+          placeholder="Leave a comment here"
+          id="floatingTextarea2"
+          style="height: 100px; font-size: 18px"
+        ></textarea>
+        <div class="valid-feedback">Looks good!</div>
+        <div class="invalid-feedback">Please write something !</div>
+      </div>
+
+      <fieldset class="starability-slot">
+        <legend>First rating:</legend>
+        <input
+          type="radio"
+          hidden
+          id="no-rate"
+          class="input-no-rate"
+          name="review[rating]"
+          value="1"
+          checked
+          aria-label="No rating."
+        />
+        <input
+          type="radio"
+          hidden
+          id="first-rate1"
+          name="review[rating]"
+          value="1"
+        />
+        <label for="first-rate1" title="Terrible">1 star</label>
+        <input
+          type="radio"
+          hidden
+          id="first-rate2"
+          name="review[rating]"
+          value="2"
+        />
+        <label for="first-rate2" title="Not good">2 stars</label>
+        <input
+          type="radio"
+          hidden
+          id="first-rate3"
+          name="review[rating]"
+          value="3"
+        />
+        <label for="first-rate3" title="Average">3 stars</label>
+        <input
+          type="radio"
+          hidden
+          id="first-rate4"
+          name="review[rating]"
+          value="4"
+        />
+        <label for="first-rate4" title="Very good">4 stars</label>
+        <input
+          type="radio"
+          hidden
+          id="first-rate5"
+          name="review[rating]"
+          value="5"
+        />
+        <label for="first-rate5" title="Amazing">5 stars</label>
+      </fieldset>
+
+      <button type="submit" class="btn mt-3 btn-primary">Submit</button>
+    </form>
+  </div>
+  <div class="mt-3 mb-3">
+    <h2 class="mt-3 mb-3">All Reviews</h2>
+    <ol class="row">
+      <% for(let review of reviews) { %>
+      <li class="mb-5 col-4">
+        <h3><%= review.author.username %></h3>
+        <span>
+          <p class="starability-result mb-1" data-rating="3">
+            <%= review.rating %>
+          </p>
+          <%= review.comment %></span
+        >
+        <form
+          method="post"
+          action="/listings/<%= listing._id %>/reviews/<%= review._id%>?_method=DELETE"
+        >
+          <button>Delete Rating</button>
         </form>
-      </div>
-      <div class="mt-3 mb-3">
-        <h2 class="mt-3 mb-3">All Reviews</h2>
-        <ol class="row">
-          <% for(let review of reviews) { %>
-            <li class="mb-5 col-4">
-              <h3><%= review.author.username %></h3><span>
-                <p class="starability-result mb-1" data-rating="3">
-                  <%= review.rating %>
-                </p>
-                <%= review.comment %></span>
-            <form method="post" action="/listings/<%= singleData._id %>/reviews/<%= review._id%>?_method=DELETE">
-              <button>Delete Rating</button>
-            </form>
-            </li>
-            
-          <% } %>
-        </ol>
-      </div>
-  </body>
-</html>
+      </li>
+
+      <% } %>
+    </ol>
+  </div>
+  <div id="map"></div>
+</div>
+<script src="/js/map.js"></script>
