404 error fixed and some folders and files were deleted

--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,84 +1,96 @@
 <% layout("layouts/boilerplate.ejs") %>
-<body>
+<div>
   <div class="titleOfNew">
     <h3>Edit</h3>
     <p>Hey! edit you listing</p>
   </div>
-    <form enctype="multipart/form-data" novalidate class="needs-validation" method="post" action="/listings/<%= listing._id %>?_method=PUT">
-      <!-- Title -->
-      <div class="mb-3 mt-3">
-        <label for="inputTitle" class="form-label">Title</label> <br />
-        <input
+  <form
+    enctype="multipart/form-data"
+    novalidate
+    class="needs-validation"
+    method="post"
+    action="/listings/<%= listing._id %>?_method=PUT"
+  >
+    <!-- Title -->
+    <div class="mb-3 mt-3">
+      <label for="inputTitle" class="form-label">Title</label> <br />
+      <input
         required
         value="<%= listing.title %>"
-          type="text"
-          name="title"
-          class="form-control"
-          id="inputTitle"
-        />
-      </div>
-        <!-- Description -->
-      <div class="mb-3">
-        <label for="inputDescription" class="form-label">Description</label>
-        <br />
-        <textarea
-        required
-          type="text"
-          name="description"
-          class="form-control"
-          id="inputDescription"
-          
-        ><%= listing.description %></textarea>
-      </div>
+        type="text"
+        name="title"
+        class="form-control"
+        id="inputTitle"
+      />
+    </div>
+    <!-- Description -->
+    <div class="mb-3">
+      <label for="inputDescription" class="form-label">Description</label>
       <br />
-      <!-- Image -->
-      <div class="mb-3">
-        <img src="<%= orginalUrl %>" alt="img">
-        <label for="inputImage" class="form-label"> Image </label> <br />
-        <input type="file" value="<%= listing.image.url %>" required class="form-control" id="inputImage" name="image">
-      </div>
-      <br />
-      <!-- Price -->
-      <div class="mb-3">
-        <label for="inputPrice" class="form-label">Price</label> <br />
-        <input
+      <textarea
         required
-          type="number"
-          name="price"
-          class="form-control"
-          id="inputPrice"
-          value="<%= listing.price %>"
-        />
-      </div>
-      <br>
-      <!-- Location -->
-      <div class="mb-3">
-        <label for="inputLocation" class="form-label">Location</label> <br />
-        <input
+        type="text"
+        name="description"
+        class="form-control"
+        id="inputDescription"
+      >
+<%= listing.description %></textarea
+      >
+    </div>
+    <br />
+    <!-- Image -->
+    <div class="mb-3">
+      <img src="<%= orginalUrl %>" alt="img" />
+      <label for="inputImage" class="form-label"> Image </label> <br />
+      <input
+        type="file"
+        value="<%= listing.image.url %>"
         required
-          type="text"
-          name="location"
-          class="form-control"
-          id="inputLocation"
-          value="<%= listing.location %>"
-        />
-      </div>
-      <br />
-      <!-- Country -->
-      <div class="mb-3">
-        <label for="inputCountry" class="form-label">Country</label> <br />
-        <input
+        class="form-control"
+        id="inputImage"
+        name="image"
+      />
+    </div>
+    <br />
+    <!-- Price -->
+    <div class="mb-3">
+      <label for="inputPrice" class="form-label">Price</label> <br />
+      <input
         required
-          type="text"
-          name="country"
-          class="form-control"
-          id="inputCountry"
-          value="<%= listing.country %>"
-        />
-      </div>
-      <br />
-      <button type="submit" class="btn btn-primary mb-3">Update</button>
-
-    </form>
-</body>
-</html>
+        type="number"
+        name="price"
+        class="form-control"
+        id="inputPrice"
+        value="<%= listing.price %>"
+      />
+    </div>
+    <br />
+    <!-- Location -->
+    <div class="mb-3">
+      <label for="inputLocation" class="form-label">Location</label> <br />
+      <input
+        required
+        type="text"
+        name="location"
+        class="form-control"
+        id="inputLocation"
+        value="<%= listing.location %>"
+      />
+    </div>
+    <br />
+    <!-- Country -->
+    <div class="mb-3">
+      <label for="inputCountry" class="form-label">Country</label> <br />
+      <input
+        required
+        type="text"
+        name="country"
+        class="form-control"
+        id="inputCountry"
+        value="<%= listing.country %>"
+      />
+    </div>
+    <br />
+    <button type="submit" class="btn btn-primary mb-3">Update</button>
+  </form>
+</div>
