--- a/views/listings/login.ejs
+++ b/views/listings/login.ejs
@@ -1,34 +1,33 @@
-<% layout('layouts/boilerplate.ejs') %>
-    <div class="titleOfNew">
-      <h3>Hey! Welcome to Login page</h3>
+<% layout('/layouts/boilerplate.ejs') %>
+<div>
+  <div class="titleOfNew">
+    <h3>Hey! Welcome to Login page</h3>
+  </div>
+
+  <form novalidate method="post" action="/login" class="needs-validation">
+    <!-- username -->
+    <div class="mb-3">
+      <label for="inputUsername" class="form-label">Username</label>
+      <br />
+      <input
+        required
+        type="text"
+        name="username"
+        class="form-control"
+        id="inputUsername"
+      />
+    </div>
+    <!-- password -->
+    <div class="mb-3">
+      <label for="inputPassword" class="form-label">Password</label> <br />
+      <input
+        type="password"
+        name="password"
+        class="form-control"
+        id="inputPassword"
+      />
     </div>
 
-    <form novalidate method="post" action="/login" class="needs-validation">
-      <!-- username -->
-      <div class="mb-3">
-        <label for="inputUsername" class="form-label">Username</label>
-        <br />
-        <input
-        required
-          type="text"
-          name="username"
-          class="form-control"
-          id="inputUsername"
-        >
-        </input>
-      </div>
-      <!-- password -->
-      <div class="mb-3">
-        <label for="inputPassword" class="form-label">Password</label> <br />
-        <input
-          type="password"
-          name="password"
-          class="form-control"
-          id="inputPassword"
-        />
-      </div>
-
-      <button type="submit" class="btn btn-primary mb-3">Submit</button>
-    </form>
-  </body>
-</html>
+    <button type="submit" class="btn btn-primary mb-3">Submit</button>
+  </form>
+</div>
