--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,25 +1,31 @@
-<% layout('/layouts/boilerplate.ejs') %>
+<% layout('/layouts/boilerplate') %>
 
-<div class="container mx-auto mt-3">
-  <ul
-    class="d-flex row-gap-3 justify-content-center justify-content-md-between flex-wrap card-parent"
-  >
-    <% for(let element of data) { %>
-    <li class="">
-      <a href="/listings/<%= element.id %>">
-        <div class="card">
-          <img src="<%= element.image.url %>" class="card-img-top" alt="..." />
-          <div class="card-img-overlay"></div>
-          <div class="card-body">
-            <h5 class="card-title">
-              <a href="/listings/<%= element.id %>"><%= element.title %></a>
-            </h5>
-            <p class="card-text"><%= element.description %></p>
+<body>
+  <div class="container mx-auto mt-3">
+    <ul
+      class="d-flex row-gap-3 justify-content-center justify-content-md-between flex-wrap card-parent"
+    >
+      <% for(let element of data) { %>
+      <li class="">
+        <a href="/listings/<%= element.id %>">
+          <div class="card">
+            <img
+              src="<%= element.image.url %>"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-img-overlay"></div>
+            <div class="card-body">
+              <h5 class="card-title">
+                <a href="/listings/<%= element.id %>"><%= element.title %></a>
+              </h5>
+              <p class="card-text"><%= element.description %></p>
+            </div>
           </div>
-        </div>
-      </a>
-    </li>
+        </a>
+      </li>
 
-    <% } %>
-  </ul>
-</div>
+      <% } %>
+    </ul>
+  </div>
+</body>
