--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -31,3 +31,14 @@
     </div>
   </div>
 </nav>
+<div class="searchArea">
+  <form method="post" action="/listings/search" class="d-flex">
+    <input
+      class="form-control me-2"
+      type="search"
+      placeholder="Search"
+      name="country"
+    />
+    <button class="btn btn-outline-success" type="submit">Search</button>
+  </form>
+</div>
